Travel::Status::DE::IRIS 1.41 - Sun Dec 29 2019

    * Result: Add "wing_of" accessor
    * Follow name and DS100 change of Freiburg West (RFW) to
      Freiburg-Landwasser (RFLW)
    * Add more stations

Travel::Status::DE::IRIS 1.40 - Tue Dec 25 2019

    * Incorporate the last few years' worth of station name changes

Travel::Status::DE::IRIS 1.39 - Tue Dec 17 2019

    * Add missing geocoordinates to nearly all remaining stations
      (thanks to @marudor)
    * Add stations opened this year (thanks to @marudor)

Travel::Status::DE::IRIS 1.38 - Sun Dec 15 2019

    * Add geocoordinates for belgian stations
      (patch by https://github.com/Knuspel)
    * New IRIS option: "keep_transfers"

Travel::Status::DE::IRIS 1.37 - Sat Dec 07 2019

    * Add geocoordinates for french stations served by Thalys/TGV
      (patch by Florian Wurzel)

Travel::Status::DE::IRIS 1.36 - Fri Nov 22 2019

    * Update stations list, prune duplicates and outdated entries
      (251 additions, 155 deletions). Incorporates patches by Moritz Schlarb
      and https://github.com/Knuspel -- Thanks!
    * Update documentation to reflect that EVA IDs used by DB IRIS are not
      the same as UIC station IDs (they just happen to be identical in 99% of
      cases)
    * Stations are now stored in share/stations.json. See README.md for
      station management hints.

Travel::Status::DE::IRIS 1.35 - Sun Nov 17 2019

    * Add additional dutch and austrian stations
      (thanks to https://github.com/Knuspel)
    * Add geocoordinates for several of those
      (thanks to https://github.com/Knuspel)

Travel::Status::DE::IRIS 1.34 - Sat Oct 19 2019

    * Improve request speed when using with_related by ignoring
      subway stations which do not have results anyways (e.g. in Hannover Hbf)
    * Do not forward unexpected IRIS message codes (ID ≥ 100) to the user
    * IRIS: Add ->related_stations accessor

Travel::Status::DE::IRIS 1.33 - Sat Oct 05 2019
